# cuda_reduce_benchmark

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh
benchmarks/: CMakeLists.txt  cuda_benchmark.cc
benchmarks/ReduceArray0/: baseline.cc  baseline.cu
benchmarks/ReduceArray1/: no_divergence_branch.cc  no_divergence_branch.cu  no_divergence_branch.cuh
benchmarks/ReduceArray2/: no_bank_conflict.cc  no_bank_conflict.cu  no_bank_conflict.cuh
benchmarks/ReduceArray3/: add_during_load.cc  add_during_load.cu  add_during_load.cuh
benchmarks/ReduceArray4/: unroll_last_warp.cc  unroll_last_warp.cu
benchmarks/ReduceArray5/: completely_unroll.cc  completely_unroll.cu  completely_unroll.cuh
benchmarks/ReduceArray6/: shuffle.cc  shuffle.cu  shuffle.cuh
benchmarks/add_during_load/: add_during_load.cc  add_during_load.cu  add_during_load.cuh
benchmarks/baseline/: baseline.cc  baseline.cu  baseline.cuh
benchmarks/bm_base/: CMakeLists.txt  basereduce.h  benchmark_entry.h
benchmarks/bm_lib/: CMakeLists.txt  basereduce.cpp  basereduce.h  benchmakr_base.cc  benchmark_base.h  benchmark_entry.cc  benchmark_entry.h  utils.cc  utils.h
benchmarks/completely_unroll/: completely_unroll.cc  completely_unroll.cu  completely_unroll.cuh
benchmarks/no_bank_conflict/: no_bank_conflict.cc  no_bank_conflict.cu  no_bank_conflict.cuh
benchmarks/no_divergence_branch/: no_divergence_branch.cc  no_divergence_branch.cu  no_divergence_branch.cuh
benchmarks/reduce1/: reduce1.cc  reduce1.cu  reduce1.cuh
benchmarks/reduce2/: reduce2.cc  reduce2.cu  reduce2.cuh
benchmarks/reduce3/: reduce3.cc  reduce3.cu  reduce3.cuh
benchmarks/reduce4/: reduce4.cc  reduce4.cu  reduce4.cuh
benchmarks/reduce5/: reduce5.cc  reduce5.cu  reduce5.cuh
benchmarks/reduce6/: reduce6.cc  reduce6.cu  reduce6.cuh
benchmarks/reduce7/: reduce7.cc  reduce7.cu  reduce7.cuh
benchmarks/reduce_baseline/: reduce_baseline.cc  reduce_baseline.cu  reduce_baseline.cuh
benchmarks/shuffle/: a.cu  shuffle.cc  shuffle.cu  shuffle.cuh
benchmarks/unroll_last_warp/: unroll_last_warp.cc  unroll_last_warp.cu  unroll_last_warp.cuh
script/: plot.py
